<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="statusMessage"
            type="String" />

        <variable
            name="country"
            type="String" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{statusMessage}"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/fullNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/full_name"
                app:startIconDrawable="@drawable/ic_person_24"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/countryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/country"
                app:startIconDrawable="@drawable/ic_flag_24"
                app:endIconMode="dropdown_menu"
                app:helperText="Required"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/fullNameContainer">

                <AutoCompleteTextView
                    android:id="@+id/countryACTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/phoneNumberContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/ic_phone_24"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:layout_constraintTop_toBottomOf="@id/countryContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/amount_to_transfer"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberContainer"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transferAmountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/exchangeInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/amountContainer"
                app:layout_constraintStart_toStartOf="@+id/amountContainer"
                app:layout_constraintTop_toBottomOf="@id/amountContainer" />

            <Button
                android:id="@+id/payButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:padding="16dp"
                android:text="@string/send"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exchangeInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

